force-app/main/default/objects/Class_Adjustment__c/Class_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Class Adjustment</label>
    <nameField>
        <displayFormat>CA - {0}</displayFormat>
        <label>Class Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Adjustments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>