force-app/main/default/objects/Class_Adjustment__c/fields/Batch_Group__c.field-meta.xml
<CustomField>
    <fullName>Batch_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch/Group</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Class Adjustments</relationshipLabel>
    <relationshipName>Class_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>