force-app/main/default/objects/Class_Adjustment__c/fields/CO_Schedule_Parent__c.field-meta.xml
<CustomField>
    <fullName>CO_Schedule_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CO Schedule Parent</label>
    <referenceTo>hed__Course_Offering_Schedule__c</referenceTo>
    <relationshipLabel>Class Adjustments (CO Schedule Parent)</relationshipLabel>
    <relationshipName>Class_Adjustments2</relationshipName>
    <type>Lookup</type>
</CustomField>