force-app/main/default/objects/Class_Adjustment__c/fields/Course_Offering_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering Schedule</label>
    <referenceTo>hed__Course_Offering_Schedule__c</referenceTo>
    <relationshipLabel>Class Adjustments</relationshipLabel>
    <relationshipName>Class_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>