force-app/main/default/objects/Class_Adjustment__c/fields/Faculty_Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Class Adjustments</relationshipLabel>
    <relationshipName>Class_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>