force-app/main/default/objects/Class_Adjustment__c/fields/Leave_Request__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Request</label>
    <referenceTo>Leave_Request__c</referenceTo>
    <relationshipLabel>Class Adjustments</relationshipLabel>
    <relationshipName>Class_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>