force-app/main/default/objects/Class_Adjustment__c/fields/Leave_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request_Status__c</fullName>
    <formula>TEXT(Leave_Request__r.Leave_Request_Status__c)</formula>
    <label>Leave Request Status</label>
    <type>Text</type>
</CustomField>