force-app/main/default/objects/Class_Adjustment__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Class_Adjustments1</relationshipName>
    <type>Lookup</type>
</CustomField>