force-app/main/default/objects/Class_Adjustment__c/fields/Requested_Course_Offering_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Requested_Course_Offering_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Course Offering Schedule</label>
    <referenceTo>hed__Course_Offering_Schedule__c</referenceTo>
    <relationshipLabel>Class Adjustments (Requested Course Offering Schedule)</relationshipLabel>
    <relationshipName>Class_Adjustments1</relationshipName>
    <type>Lookup</type>
</CustomField>