force-app/main/default/objects/Class_Adjustment__c/fields/Requested_Professor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Professor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Professor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Class_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>