force-app/main/default/objects/Class_Adjustment__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <label>Start time</label>
    <type>Time</type>
</CustomField>