force-app/main/default/objects/Class_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Leave_Request__c</columns>
    <columns>Requested_Professor__c</columns>
    <columns>Course_Offering_Schedule__c</columns>
    <columns>Requested_Course_Offering_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requested_Professor__c</field>
        <operation>contains</operation>
        <value>K Narayan swamy</value>
    </filters>
    <label>All</label>
</ListView>